--- a/cliente/templates/cliente_detail.html
+++ b/cliente/templates/cliente_detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
-
 {% block content %}
+{% block title %}
+<title>Detalhes Cliente: {{ object }}</title>
+{% endblock title %}
 {% if user.is_authenticated %}
 
 <div class="page-header">
