--- a/entrada/templates/estoque_entrada_list.html
+++ b/entrada/templates/estoque_entrada_list.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% block content %}
 {% block css %}
-
+{% block title %}
+<title>Lista de Entrada</title>
+{% endblock title %}
 <style>
     .dark{
                 color: #000000;
