--- a/produto/templates/produto_form.html
+++ b/produto/templates/produto_form.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% load widget_tweaks %}
 {% load bootstrap %}
+{% block title %}
+<title>Cadastro de Produto</title>
+{% endblock title %}
 {% block content %}
 {% if user.is_authenticated %}
 <div class="row">
