--- a/produto/templates/produto_list.html
+++ b/produto/templates/produto_list.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block title %}
+<title>Lista de Produto</title>
+{% endblock title %}
 {% block content %}
 
 {% for message in messages %}
