--- a/usuarios/templates/atualizar_cadastro.html
+++ b/usuarios/templates/atualizar_cadastro.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% load widget_tweaks %}
 {% load bootstrap %}
+{% block title %}
+<title>Atualizar Cadastro</title>
+{% endblock title %}
 {% block content %}
 {% if messages %}
     {% for message in messages %}
