--- a/cliente/templates/cliente_confirm_delete.html
+++ b/cliente/templates/cliente_confirm_delete.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block title %}
+<title>Deletar Cliente: {{ object }}</title>
+{% endblock title %}
 {% block content %}
 <form method="post">{% csrf_token %}
     {% if user.is_authenticated %}
