--- a/cliente/templates/cliente_list.html
+++ b/cliente/templates/cliente_list.html
@@ -4,6 +4,9 @@
 {% load widget_tweaks %}
 {% load bootstrap %}
 {% for message in messages %}
+{% block title %}
+<title>Lista de Cliente</title>
+{% endblock title %}
 {% if 'success' in message.tags %}
 <p class="alert alert-success" role="alert"><span style="font-weight: bold">{{ message }}</span></p>
 {% else %}
