--- a/entrada/templates/estoque_entrada_confirm_delete.html
+++ b/entrada/templates/estoque_entrada_confirm_delete.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+{% block title %}
+<title>Deletar Entrada</title>
+{% endblock title %}
 <form method="post">{% csrf_token %}
 {% if user.is_authenticated %}
     <p>Tem certeza que deseja excluir esse essa nota? <h1>'{{ object }}'</h1></p>
