--- a/entrada/templates/estoque_entrada_detail.html
+++ b/entrada/templates/estoque_entrada_detail.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
-
+{% block title %}
+<title>Detalhes Entrada</title>
+{% endblock title %}
 {% block content %}
+
 {% if user.is_authenticated %}
 <div class="limiter">
     <div id="relatorio_itens">
@@ -38,7 +41,7 @@
                 <td>{{ obj.produto }}</td>
                 <td>{{ obj.quantidade }}</td>
                 <td>{{ obj.saldo }}</td>
-                <td>{{ obj.valor_total }}</td>
+                <td>R$ {{ obj.valor_total }}</td>
             </tr>
 
             {% endfor %}
