--- a/entrada/templates/estoque_entrada_item_form.html
+++ b/entrada/templates/estoque_entrada_item_form.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% load widget_tweaks %}
 {% load bootstrap %}
-
+{% block title %}
+<title>Casdastro de Entrada</title>
+{% endblock title %}
 {% block css %}
 <style>
     .form-control {
@@ -89,94 +91,133 @@
 </script>
 <script>
     $(document).ready(function() {
+        //insere classe no primeiro item do produto
+        $('#id_estoque-0-produto').addClass('clProduto');
+        $('#id_estoque-0-quantidade').addClass('clQuantidade');
+        //Desabilita o primeiro campo saldo
+        $('#id_estoque-0-saldo').prop('type', 'hidden')
 
-    //insere classe no primeiro item do produto
-    $('#id_estoque-0-produto').addClass('clProduto');
-    $('#id_estoque-0-quantidade').addClass('clQuantidade');
-    //Desabilita o primeiro campo saldo
-    //$('#id_estoque-0-saldo').prop('type', 'hidden')
-    //Cria um spam para mostrar saldo na tela
-    $('label[for="id_estoque-0-saldo"]').append('<span id="id_estoque-0-saldo-span" class="lead" style="padding-left: 10px;"></span>')
-    //Cria um spam para mostrar saldo na tela
-    $('label[for="id_estoque-0-saldo"]').append('<input id="id_estoque-0-inicial" class="form-control" type="hidden"/>')
+        $('#id_estoque-0-valor_total').prop('type', 'hidden')
 
+        //Cria um spam para mostrar saldo na tela
+        $('label[for="id_estoque-0-saldo"]').append('<span id="id_estoque-0-saldo-span" class="lead" style="padding-left: 10px;"></span>')
 
-     $('#add-item').click(function(ev){
-       ev.preventDefault();
-       var count = $('#estoque').children().length;
-       var tmplMarkup = $('#item-estoque').html();
-       var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
-      $('div#estoque').append(compiledTmpl);
+        $('label[for="id_estoque-0-valor_total"]').append('<span id="id_estoque-0-valor_total-span" class="lead" style="padding-left: 10px;"></span>')
 
-     //update form count
-     $('#id_estoque-TOTAL_FORMS').attr('value', count + 1);
+        //Cria um spam para mostrar saldo na tela
+        $('label[for="id_estoque-0-saldo"]').append('<input id="id_estoque-0-inicial" class="form-control" type="hidden"/>')
 
-     //Desabilita o campo saldo
-     $('#id_estoque-'+ (count) +'-saldo').prop('type', 'hidden')
+        $('label[for="id_estoque-0-valor_total"]').append('<input id="id_estoque-0-inicial" class="form-control" type="hidden"/>')
 
-      //some animate to scroll to view our new form
-     $('html, body').animate({
-        scrollTop: $("#add-item").position().top - 200
-     }, 800);
+        $('#add-item').click(function(ev){
+           ev.preventDefault();
+           var count = $('#estoque').children().length;
+           var tmplMarkup = $('#item-estoque').html();
+           var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
+           $('div#estoque').append(compiledTmpl);
 
-      $('#id_estoque-' + (count) + '-produto').addClass('clProduto');
-      $('#id_estoque-' + (count) + '-quantidade').addClass('clQuantidade');
+           //update form count
+           $('#id_estoque-TOTAL_FORMS').attr('value', count + 1);
 
-      //Cria um spam para mostrar saldo na tela
-      $('label[for="id_estoque-' + (count) + '-saldo"]').append('<span id="id_estoque-' + (count) + '-saldo-span" class="lead" style="padding-left: 10px;"></span>')
-       //Cria um spam para mostrar saldo na tela
-      $('label[for="id_estoque-' + (count) + '-saldo"]').append('<input id="id_estoque-' + (count) + '-inicial" class="form-control" type="hidden"/>')
-      //Select2
-      $('.clProduto').select2()
-      });
+           //Desabilita o campo saldo
+           $('#id_estoque-'+ (count) +'-saldo').prop('type', 'hidden')
+
+           $('#id_estoque-'+ (count) +'-valor_total').prop('type', 'hidden')
+
+           //some animate to scroll to view our new form
+            $('html, body').animate({scrollTop:
+            $("#add-item").position().top - 200}, 800);
+            $('#id_estoque-' + (count) + '-produto').addClass('clProduto');
+            $('#id_estoque-' + (count) + '-quantidade').addClass('clQuantidade');
+
+            //Cria um spam para mostrar saldo na tela
+            $('label[for="id_estoque-' + (count) + '-saldo"]').append('<span id="id_estoque-' + (count) + '-saldo-span" class="lead" style="padding-left: 10px;"></span>')
+            $('label[for="id_estoque-' + (count) + '-valor_total"]').append('<span id="id_estoque-' + (count) + '-valor_total-span" class="lead" style="padding-left: 10px;"></span>')
+            //Cria um spam para mostrar saldo na tela
+            $('label[for="id_estoque-' + (count) + '-saldo"]').append('<input id="id_estoque-' + (count) + '-inicial" class="form-control" type="hidden"/>')
+            $('label[for="id_estoque-' + (count) + '-valor_total"]').append('<input id="id_estoque-' + (count) + '-inicial" class="form-control" type="hidden"/>')
+        });
     });
 
     let estoque
-    let saldo
-    let campo
-    let campo2
+    let saldos
+    let campoSaldo
+    let campoPreco
+    let campoSaldo2
+    let campoPreco2
     let quantidade
+    let precoCampo
+    let precos
+    let valorTotal
+
 
     $(document).on('change', '.clProduto', function() {
-    let self = $(this)
-    let pk = $(this).val()
-    let url = '/produto/' + pk + '/json/'
+        let self = $(this)
+        let pk = $(this).val()
+        let url = '/produto/' + pk + '/json/'
 
-    $.ajax({
-    url: url,
-    type: 'GET',
-    success: function(response) {
-        estoque = response.data[0].estoque
-        campo = self.attr('id').replace('produto', 'quantidade')
-        estoque_inicial = self.attr('id').replace('produto', 'inicial')
-        // estoque inicial
-        $('#'+estoque_inicial).val(estoque)
-        // remover o valor do campo quantidade
-        $('#'+campo).val('')
-    },
-    error: function(xhr) {
-        }
-      })
+        $.ajax({
+        url: url,
+        type: 'GET',
+        success: function(response) {
+            estoque = response.data[0].estoque
+            preco = response.data[0].preco
+
+            campoSaldo = self.attr('id').replace('produto', 'quantidade')
+            campoPreco = self.attr('id').replace('produto', 'valor_total')
+
+            estoque_inicial = self.attr('id').replace('produto', 'inicial')
+            //preco_inicial = self.attr('id').replace('produto', 'preco')
+
+            // estoque inicial
+            $('#'+estoque_inicial).val(estoque)
+            $('#'+preco_inicial).val(preco)
+
+            // remover o valor do campo quantidade
+            $('#'+campoSaldo).val('')
+            $('#'+campoPreco).val('')
+        },
+        error: function(xhr) {
+            }
+          })
     });
 
     $(document).on('change', '.clQuantidade', function() {
         quantidade = $(this).val();
-        //saldo = Number(quantidade) + Number(estoque);
-        campo = $(this).attr('id').replace('quantidade', 'saldo')
-       campo_estoque_inicial = $(this).attr('id').replace('quantidade', 'inicial')
+        //calculo sabtração estoque
+        campoSaldo = $(this).attr('id').replace('quantidade', 'saldo')
+        campo_estoque_inicial = $(this).attr('id').replace('quantidade', 'inicial')
         estoque_inicial = $('#'+campo_estoque_inicial).val()
-        saldo = Number(quantidade) + Number(estoque_inicial);
+
+        campoPreco = $(this).attr('id').replace('quantidade', 'valor_total')
+        campo_preco_inicial = $(this).attr('id').replace('quantidade', 'preco')
+        precos = $('#'+campo_preco_inicial).val()
+
+        // Cálculo do valor total
+        saldos =  Number(estoque_inicial) + Number(quantidade);
+        valorTotal = parseFloat(preco) * Number(quantidade);
+
+
+        if(saldos < 0){
+            alert('Quantidade digitada maior que saldo disponivel ou negativa.')
+            $('#'+campo).val('')
+            return
+        }
 
         //Desabilita o campo saldo
-        $('#'+campo).prop('type', 'hidden')
+        $('#'+campoSaldo).prop('type', 'hidden')
+        $('#'+campoPreco).prop('type', 'hidden')
+
         //atribui o saldo ao campo saldo
-        $('#'+campo).val(saldo)
-        campo2 = $(this).attr('id').replace('quantidade', 'saldo-span')
+        $('#'+campoSaldo).val(saldos)
+        $('#'+campoPreco).val(valorTotal)
+        campoSaldo2 = $(this).attr('id').replace('quantidade', 'saldo-span')
+        campoPreco2 = $(this).attr('id').replace('quantidade', 'valor_total-span')
+
         //Atribui o saldo ao campo 'id_estoque-x-saldo-span'
-        $('#'+campo2).text(saldo)
+        $('#'+campoSaldo2).text(saldos)
+        $('#'+campoPreco2).text(valorTotal)
     });
-
-
 
 </script>
 
