--- a/produto/templates/produto_confirm_delete.html
+++ b/produto/templates/produto_confirm_delete.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block title %}
+<title>Deletar Produto: {{ object }}</title>
+{% endblock title %}
 {% block content %}
 <form method="post">{% csrf_token %}
     {% if user.is_authenticated %}
