--- a/produto/templates/produto_detail.html
+++ b/produto/templates/produto_detail.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block title %}
+<title>Detalhes Produto: {{ object }}</title>
+{% endblock title %}
 {% block content %}
 {% if user.is_authenticated %}
 <div class="page-header">
