--- a/relatorio/templates/relatorio_cliente.html
+++ b/relatorio/templates/relatorio_cliente.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% csrf_token %}
+{% block title %}
+<title>Relatorio Cliente</title>
+{% endblock title %}
 {% block css %}
 <style>
 .form{
