--- a/relatorio/templates/relatorio_saida.html
+++ b/relatorio/templates/relatorio_saida.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% csrf_token %}
+{% block title %}
+<title>Relatorio Saída</title>
+{% endblock title %}
 {% block css %}
 <style>
 .form{
