--- a/saida/templates/estoque_saida_detail.html
+++ b/saida/templates/estoque_saida_detail.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+<title>Detalhes Saída</title>
+{% endblock title %}
 {% block content %}
 {% if user.is_authenticated %}
 <div class="limiter">
@@ -38,7 +41,7 @@
                 <td>{{ obj.produto }}</td>
                 <td>{{ obj.quantidade }}</td>
                 <td>{{ obj.saldo }}</td>
-                <td>{{ obj.valor_total }}</td>
+                <td>R$ {{ obj.valor_total }}</td>
 
             </tr>
 
