--- a/saida/templates/estoque_saida_list.html
+++ b/saida/templates/estoque_saida_list.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+<title>Lista de saída</title>
+{% endblock title %}
 {% block content %}
 <div class="page-header">
     {% if user.is_authenticated %}
