--- a/templates/static/css/loginStyle.css
+++ b/templates/static/css/loginStyle.css
@@ -13,7 +13,8 @@ body{
 
 .background{
     width: 430px;
-    height: 520px;
+    min-height: 520px;
+    height: auto;
     position: absolute;
     transform: translate(-50%,-50%);
     left: 50%;
@@ -47,7 +48,8 @@ body{
 }
 
 form{
-    height: 585px;
+    min-height: 520px;
+    height: auto;
     width: 450px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
