--- a/usuarios/templates/esqueceu_senha.html
+++ b/usuarios/templates/esqueceu_senha.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block 'title'%}Esqueceu Senha{% endblock 'title'%}
 {% block content %}
 {% if messages %}
 {% for message in messages %}
