--- a/usuarios/templates/redefinir_senha.html
+++ b/usuarios/templates/redefinir_senha.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-
+{% block title %}
+<title>Redefinir Senha</title>
+{% endblock title %}
 {% block content %}
 {% if messages %}
 {% for message in messages %}
